# awesome_modern_cpp

./: .gitignore  README.md
auto/: CMakeLists.txt  README.md  auto.cpp
deducing_types/: CMakeLists.txt  README.md  auto_type_deduce.cpp  decltype.cpp  template_type_deduce.cpp
lambda/: CMakeLists.txt  README.md  bind_vs_lambda.cpp  lambda_usage.cpp
move_to_modern_cpp/: CMakeLists.txt  README.md  constexpr.cpp  delete_vs_undefined.cpp  enum_class_vs_enum.cpp  nullptr_vs_0.cpp  override.cpp  using_vs_typedef.cpp
rvalue_move_perfect_forward/: CMakeLists.txt  README.md  distinguish_rvalue_ref_and_universal_ref.cpp  perfect_forward.cpp  tag_dispatch.cpp  template_constraint.cpp
smart_ptr/: CMakeLists.txt  README.md  pimpl.cpp  pimpl.h  pimpl_main.cpp  shared_ptr.cpp  unique_ptr.cpp
templates/: CMakeLists.txt  README.md  fold_expression.cc  non_type_template.cc  partial_specialization.cc  specialization.cc  str_literal_template.cc  tuple_iter.cc  variable_template.cc  variadic_template.cc
